[package]
name = "leptos_a11y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4" }
leptos_router = { version = "0.4" }
leptos_meta = { version = "0.4" }
leptos_actix = { version = "0.4", optional = true }
uuid = { version = "1.3.3", features = ["v4", "js"] }
leptos-use = "0.6.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlElement"] }

[features]
ssr = ["leptos-use/ssr", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[dev-dependencies]
pretty_assertions = "1.4.0"
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3.64", features = [
  "Event",
  "EventInit",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "XPathResult",
] }
leptos = { version = "0.4", features = ["csr"] }
leptos_router = { version = "0.4", features = ["csr"] }
leptos_meta = { version = "0.4", features = ["csr"] }
